updated spacing and header

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ EMAIL: jorinac@uci.edu
         </div>
 
         <h3>International Student Well-Being (ISWB)</h3>
-        <p>
+        <p style="width:100%">
           <strong>CASE STUDY | ITERATIVE DESIGN | UX RESEARCH </strong
           ><br /><br />
           Researching the international student experience to support and
@@ -309,7 +309,7 @@ EMAIL: jorinac@uci.edu
         </div>
 
         <h3>Cookology</h3>
-        <p>
+        <p style="width:100%">
           <strong>PASSION PROJECT | UX DESIGN | PROTOTYPING </strong
           ><br /><br />
           A mobile application that allows users to easily find recipes, revisit
@@ -335,7 +335,7 @@ EMAIL: jorinac@uci.edu
         </div>
 
         <h3>Calendi</h3>
-        <p>
+        <p style="width:100%">
           <strong>PASSION PROJECT | UX DESIGN | PROTOTYPING </strong
           ><br /><br />
           A web-based application that is used to keep track of classes,
@@ -358,7 +358,7 @@ EMAIL: jorinac@uci.edu
           >
         </div>
         <h3>Zendesk</h3>
-        <p>
+        <p style="width:100%">
           <strong>INTERNSHIP | UX RESEARCH | USER INTERVIEWS </strong
           ><br /><br />
           Conducted research on customer-facing experiences through moderated
