--- a/iswb.html
+++ b/iswb.html
@@ -97,12 +97,23 @@ EMAIL: jorinac@uci.edu
           alt="Dark mode icon"
         />
       </button>
+
+      
+      <!-- <a href="javascript:void(0)" class="close-icon" onclick="menuToggle()"
+        >Close</a> -->
+
       <a href="javascript:void(0)" class="close-icon" onclick="menuToggle()"
-        >Close</a
-      >
-      <!-- <a href="javascript:void(0)" class="close-icon" onclick="menuToggle()"> <span class="material-symbols-outlined">Close</span></a> -->
+      ><img 
+        class="icon2"
+        src="Images/Close_icon_dark.png"
+        width="42"
+        height="42"
+        alt="Jorina Chen's website logo"
+        class="mobile-logo"
+      ></a>
+
+
     </div>
-    <!-- <a href="javascript:void(0)"class="icon" onclick="menuToggle()"> <span class="material-symbols-outlined">Menu</span></a> -->
     <a onclick="menuToggle()"
       ><img
         class="icon"
@@ -112,7 +123,9 @@ EMAIL: jorinac@uci.edu
         alt="Jorina Chen's website logo"
         class="mobile-logo"
     /></a>
+    
   </div>
+
 
    <!-- case study images-->
   <div class="ISWB-case-study-images">
